implemented dark mode toggle

--- a/src/components/css-modules/CreateItem.module.css
+++ b/src/components/css-modules/CreateItem.module.css
@@ -16,6 +16,7 @@
   background-color: transparent;
   margin-top: 0.1rem;
   padding: 0;
+  font-size: 1rem;
 }
 
 .completed {
@@ -34,12 +35,14 @@
   flex: 1 1 auto;
   font-size: 1.4rem;
   margin-left: 0.5rem;
+  /* font-weight: bold; */
 }
 
 .icon {
   display: flex;
   justify-content: center;
-  background-color: var(--color-grey);
+  background-color: var(--color-accent);
+  opacity: 0.7;
   border-radius: 100%;
   width: 30px;
   height: 30px;
@@ -48,7 +51,7 @@
 
 .icon:hover {
   background-color: var(--color-accent);
-  opacity: 0.8;
+  opacity: 1;
   cursor: pointer;
   transform: scale(120%) rotate(30deg);
 }
